<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_fragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="6"
    android:background="#4CAF50"
    android:clipChildren="false"
    android:orientation="vertical"
    android:paddingTop="48dp">

    <!--<FrameLayout-->
    <!--android:id="@+id/images"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="4"-->
    <!--android:clipChildren="false">-->
    <!--<ImageView-->
    <!--android:id="@+id/welcome_01"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:scaleType="centerInside"-->
    <!--android:src="@drawable/welcome_01"-->
    <!--android:paddingLeft="16dp"-->
    <!--android:paddingRight="16dp"-->
    <!--android:layout_gravity="center_horizontal|bottom"/>-->

    <!--</FrameLayout>-->

    <LinearLayout
        android:id="@+id/welcome_01"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:clipChildren="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="48dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@drawable/mail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="10010\n中国联通"
                android:textColor="#C8E6C9"
                android:textSize="28dp" />

        </LinearLayout>


        <TextView
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:background="@drawable/ffj"
            android:gravity="center_vertical"
            android:text="@string/example_01"
            android:textColor="#BBDEFB"
            android:textSize="14sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/heading"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/welcome_head_01"
        android:textAppearance="@style/WelcomeHeadingAppearance" />

    <TextView
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|center_horizontal"
        android:minHeight="@dimen/welcome_content_min_height"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/welcome_content_01"
        android:textAppearance="@style/WelcomeContentAppearance" />

    <View
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/transparent" />

</LinearLayout>